--- a/LB1 SWAGGER/package.json
+++ b/LB1 SWAGGER/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "connect": "^3.2.0",
+    "js-sha256": "^0.9.0",
     "js-yaml": "^3.3.0",
     "oas3-tools": "^2.2.2"
   }
